[package]
name = "uefi-graphics-driver"
version = "0.1.0"
edition = "2021"
authors = ["GengYage"]
readme = "README.md"
description = "An embedded-graphics display driver for UEFI environments"
repository = "https://github.com/GengYage/uefi-graphics"
license = "MIT OR Apache-2.0"
keywords = ["uefi", "graphics", "no-std", "embedded"]
categories = ["no-std", "embedded", "hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.20"
uefi-services = "0.17"
embedded-graphics-core = "0.3.3"

[dev-dependencies]
embedded-graphics = "0.7.1"
log = "0.4"
